# GitSwitch

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  git_config.rs  lib.rs  main.rs  oauth.rs  shell_env.rs  validate.rs
src/components/app/: AppShell.tsx
src/components/common/: EmptyState.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx
src/lib/: accounts.ts  queryClient.ts  tauri.ts
src/views/: AccountCard.tsx  AccountList.tsx  ActiveAccountBanner.tsx  AddAccountDialog.tsx  DetectedAccountCard.tsx  DeviceFlowDialog.tsx
